--- a/VRChat/77/987577.html
+++ b/VRChat/77/987577.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jxfzNsMB4ljSB2rSt28EvqqZ3JbODqLEgfQ6ehQU+nQ="></script>
+    "PAJvjSqcYKF0B5NaktPP1ZA0gYNUWLAcP9LLdt0JNZA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat対応]レトロボ[Voxelモデル]","description":"少しレトロな雰囲気をしたVoxelロボット「レトロボ」です\n角ばってどこか間の抜けた表情のロボットを、あなたも身に纏ってみませんか？\n\n2018/11/15\n頭の横が回るアニメーションや、光るとかっこいい場所などを別メッシュに分離、一部形状の調整などをしたレトロボの新バージョンを追加しました\n内容物拡充のため販売価格を変更いたしました\n\n2018/11/17\n・VRChatのUnityバージョン変更を前にテクスチャの圧縮を調整","url":"https://booth.pm/ja/items/987577","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1800"},"image":"https://booth.pximg.net/c/620x620/6c72616e-1bae-4cce-bcc9-c341106fcced/i/987577/3b94aae1-8df7-4032-9b00-179b13915833_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jxfzNsMB4ljSB2rSt28EvqqZ3JbODqLEgfQ6ehQU+nQ="></script>
+    nonce="PAJvjSqcYKF0B5NaktPP1ZA0gYNUWLAcP9LLdt0JNZA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -670,9 +670,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
