--- a/VRChat/34/987534.html
+++ b/VRChat/34/987534.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uT5B32G386zFAXJi7y2FLheGS+GTAREC0gEQHyVM8Rk="></script>
+    "MbbYZV9JnZaYPlakNdI5xucjVkxZt3GpPtQ87x51kck="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat対応]カリブーちゃん[Voxelモデル]","description":"Voxelで作られたトナカイの女の子のモデルです！\nあなたもかわいいトナカイっ子になってみては？\n\n2020/6/6\n・クロスプラットフォーム向けのデータを同梱しました\n利用規約の改定を行いました。\n新たな利用規約の効力発生日は2020/6/8です。\n利用規約の主な変更点(利用規約の運用については大きな変更はありません)。\n・利用規約の体裁を調整。\n・利用規約の正本が記載されたURLの変更。\n\n2020/6/6\nCross-platform data is now included\nThe Terms of Service have been revised.\nThe effective date of the new Terms of Service is June 8, 2020.\nMajor changes to the Terms of Service (there are no major changes in the operation of the Terms of Service).\nThe text of the Terms of Service has been adjusted.\nChanged URL containing the original copy of the Terms of Service.\n\n2018/12/23\n追加ダウンロード用のファイルとしてサンタクロース衣装のテクスチャファイルを追加しました\n\n2018/11/15\n新規衣装でメイド服バージョン(△ポリ6896)のモデルも追加いたしました\n※衣装は新規造形、UV展開も展開方式を変えたためテクスチャに互換性はありません","url":"https://booth.pm/ja/items/987534","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/6c72616e-1bae-4cce-bcc9-c341106fcced/i/987534/37fe033e-f700-4396-8e40-f557874817b6_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uT5B32G386zFAXJi7y2FLheGS+GTAREC0gEQHyVM8Rk="></script>
+    nonce="MbbYZV9JnZaYPlakNdI5xucjVkxZt3GpPtQ87x51kck="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -724,9 +724,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
