--- a/VRChat/96/987596.html
+++ b/VRChat/96/987596.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rKlEcdkO1qNNw6/afawckxOmmML9B1FpwZ7gakekAE4="></script>
+    "G1I1NxYckDlIYvgj0yJQtdA8ZpOoq8aPj6LM4Ss5lyE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"5.6.3p1VRC想定Clothスカートサンプル","description":"2021年現在、この方法は古いため、販売(ブースト版)を停止します。\n情報として残しますが、現在はお勧めしません。\n\nUnity5.6.3p1時代のVRChatで使用想定のCloth設定のサンプルです。\n情報共有が主な目的です。\n大抵の場合、そのまま流用はできないですが、一緒にClothとの和解を試みましょう。\n\nUnity上ではおよそ90度足を上げる所まで貫通せずに耐えますが、\nVRChatではClothの演算がローカルで行われるため、20fps以下ではコライダーを貫通して元に戻らないことが稀に起こります。\n\n対策として、スカートの位置リセット用にコライダーを抜くアニメーションも同梱していますので、セットでどうぞ。","url":"https://booth.pm/ja/items/987596","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/398453f0-c317-488e-9f19-c38eb6274343/i/987596/679f049a-a8be-497f-81d0-5f968262df1c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rKlEcdkO1qNNw6/afawckxOmmML9B1FpwZ7gakekAE4="></script>
+    nonce="G1I1NxYckDlIYvgj0yJQtdA8ZpOoq8aPj6LM4Ss5lyE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      404
+                                      405
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      404
+                                      405
                                     </div>
                                   </div></a>
                                 </div>
@@ -534,9 +534,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
