--- a/VRChat/07/986807.html
+++ b/VRChat/07/986807.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3aY8qljfmGyWlMc0P6BEswByNUeo8VEEPwBx/iyVS64="></script>
+    "tUECe7EEBSjTWXG3HFWq9XOijEHv71Mghs3BmFg4Lms="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"工事セット 工事看板\u0026カラーコーン","description":"ワールドに置く案内表示として\n区画を整理するための仕切りとして\nアバターアクセサリーとして\n\n様々な利用用途が見込める看板とカラーコーンのモデルセットです\n\n各モデルはほぼ実寸で作成しています。\n\n\n※使用例に表示されている素体モデルはデータに含まれません。","url":"https://booth.pm/ja/items/986807","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/b0506462-fc0b-413c-a56a-992b92221fc5/i/986807/76f03d58-df78-43aa-a4f3-916cbc7919f5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3aY8qljfmGyWlMc0P6BEswByNUeo8VEEPwBx/iyVS64="></script>
+    nonce="tUECe7EEBSjTWXG3HFWq9XOijEHv71Mghs3BmFg4Lms="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -514,9 +514,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
