--- a/VRChat/68/987268.html
+++ b/VRChat/68/987268.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "C+l61jTjyGug73LuVqlo8t/Qh4RWsa2hMTUpuYq4pHI="></script>
+    "I0nDNTOaFWV6C4VtLldOc6z/7EjzyjEqI0aPlXd04xc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"翼　詰め合わせ(アニメーション付)個人利用パッケージ","description":"【PC版VRChat向け】\n3種類30バリエーションの翼を詰め合わせたパッケージになります\n・両翼でも500ポリゴンに収まる　シンプル翼\n・小柄なアバターにも合わせやすい260ポリゴンの　ミニ翼\n・ふわっとした質感で1124ポリゴンの　ふわふわ翼\n\n片翼版もあり、背中接続の有無などで計15バリエーション\n更にテクスチャを各2しゅるい用意しているので、切り替えることで合計30バリエーションとなっております。\n\n15種類それぞれに、羽ばたくアニメーションが用意してあります。\nprefabを利用してアバターに組み込むことで、自動でアニメーションが設定されます。\n\nこちらは個人利用のライセンス形態となっておりますので、この翼を製作物に同梱して配布、販売したい場合は、もう片方の「同梱可能パッケージ」をご購入ください。\n\n2020/04/06　VRChatのUnity2018版にあわせて、テクスチャの設定を変更\nまんまるしぇーだーをバージョン3.2に差し替え\n2018/10/03  VRChatがLegacyアニメーションを廃止したことに伴い、Animator方式に変更しました\n2018/08/27　マニュアルにTips 4 翼が大きすぎる/小さすぎる/見つからない時の対処法を追加しました","url":"https://booth.pm/ja/items/987268","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/d93c3674-a136-49a1-a2f3-9a8202a223cd/i/987268/264e004a-ea49-4e74-bb0f-80a63fddbd2c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="C+l61jTjyGug73LuVqlo8t/Qh4RWsa2hMTUpuYq4pHI="></script>
+    nonce="I0nDNTOaFWV6C4VtLldOc6z/7EjzyjEqI0aPlXd04xc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -501,9 +501,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
