--- a/VRChat/76/986876.html
+++ b/VRChat/76/986876.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "18RZfbMoVgF0bR9JMrSxQWlN1/MmCXLZjZoWNqhVKtI="></script>
+    "+WrtScqJTSOGonXoi6OJDCM8PgmEUn7SNAJ/xVRdD6M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けオリジナル3Dモデル『相模琴音』","description":"VRChatアバターの習作として作成したキャラクターです。名前は”相模琴音”です。まんまるシェーダーを使わせていただきました。\nVRChat中は、デスクトップならShift+F1～F4で表情が変えられます。\n\n【データ内容】\n・Unityパッケージ\n・FBXデータ\n・blendデータ\n・テクスチャ（png）\n・利用規約（テキスト）\n\n【利用規約】\n本規約の範囲について\n・本規約は、江良野（以下、作者）が作成した3Dモデルデータ（以下、本データ）を使用する方（以下、利用者）に適用されます\n・本規約は予告なく変更される場合があり、変更された場合は最新のものにしたがいます\n・本データは利用規約の範囲内に限り利用いただけます\n\n■利用方法\n特に制限はしません\n※VRchat、自主製作ゲーム、動画、モデル検証等、ご自由にお使いください\n\n■商用利用\n許可します\n※自主製作ゲームへの使用など、問題ありません\n※第三者のライブ動画、紹介画像への映り込みも問題ありません\n\n■改変・改造\n許可します\n※改変・改造後のモデルも再配布は禁止です\n\n■R18・R18G表現\n許可します\n\n■二次配布・アップロードについて\n本データの再配布を禁止します\n※vrchatへのアップロード、ペデスタル等ローカルにダウンロード出来ない形式は、問題ありません \n※自主製作ゲーム等に含めての配布は、問題ありません\n\n\n\n【免責】\n・本データを利用することで、利用者が受ける損害および被害に関し、作者はいかなる補償をもいたしません\n・本データを利用することで、利用者が他者に損害および被害を与えた場合には、その責任および補償の義務は当該利用者にあるものとします\n\n【おまけ設定】\n都市国家オーガストシティの治安を守る強化兵士。\n狙撃が得意で、バレットM82を愛用している。\nおとなしい性格で、趣味は読書。\nバトルスーツはチャクラにエネルギーを流し込むことで装着者の身体機能を向上させる。\n恥ずかしいデザインなので本人は着用を嫌がっているが、任務のために耐えている。\n元となったイラストはこちら（https://www.pixiv.net/member_illust.php?mode=medium\u0026illust_id=64659062）。","url":"https://booth.pm/ja/items/986876","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/8a050f83-8ff0-411f-a28e-623e02aedea9/i/986876/4d6be0b0-0fb0-47f0-8c0f-ae6cec56126d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="18RZfbMoVgF0bR9JMrSxQWlN1/MmCXLZjZoWNqhVKtI="></script>
+    nonce="+WrtScqJTSOGonXoi6OJDCM8PgmEUn7SNAJ/xVRdD6M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -438,9 +438,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
