--- a/VRChat/62/986762.html
+++ b/VRChat/62/986762.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Y/VNYwbdvne7ysN/MEW95RTpmzs/izY52DxPPUpvwLM="></script>
+    "STufL/7i8VYIie6gVVO5T8vVnv3SlkRgbJ8re3RMKDM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向け3Dモデル『自販機太郎くん』","description":"主にVRchatでの使用を想定した自動販売機の3Dモデルデータです。\nVRchat以外での使用もご自由にどうぞ。Humanoidボーンが入っています。変形したりとかはしません。\nアバターとしてだけでなくワールドオブジェクトとして配置などしていただいても問題ありません。\nおまけとしてテクスチャのために夜中に食べたラーメンの具のところのGBを入れておきました。\n\n内容物\n・3Dモデルの.blendデータ\n・3Dモデルの.fbxデータ\n・3Dモデルの.unitypackageデータ\n・3Dモデルの.vrmデータ\n・テクスチャの.pngデータ\n・商品画像に使用している.pngデータ\n・VRMの画像に使用した.pngデータ\n・看板的な奴.pngデータ\n・具の写真GB.pngデータ\n\n利用規約\n・内容物そのままの状態での二次配布はご遠慮ください。\n・商用利用や改変等自由にご使用ください。\n・クレジット表記は不要です。\n・当3Dモデルを使用して発生した損害に当方は一切責任を負う事はありません。\n\n更新履歴\n2018.08.25 入っていなかったテクスチャデータの追加\n2018.08.26 移動時動きのガタつきがあったのでボーン、ウエイトの修正。\n2019.09.06 規約の改定。内容物がDLしてそのままの状態でなければ再配布を可能にしました。","url":"https://booth.pm/ja/items/986762","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dba35dca-d107-422b-b707-9076e0edd96d/i/986762/c98101c3-13a8-44d8-ac8d-016e9b033815_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Y/VNYwbdvne7ysN/MEW95RTpmzs/izY52DxPPUpvwLM="></script>
+    nonce="STufL/7i8VYIie6gVVO5T8vVnv3SlkRgbJ8re3RMKDM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -390,9 +390,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
