--- a/VRChat/72/986272.html
+++ b/VRChat/72/986272.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3CYOKvgJjzvyr4UVzabURZaDftUBmevhQpK4SyaFWyo="></script>
+    "dn6oRnedS8yl+sbRCLf0C2OrADIHPotvSKdiOwrUTSE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"やみかわドレス","description":"ゆめかわドレス\n\n※VRCのレガシーアニメーション廃止につき、ユニコーンの回転をAnimator形式に変更しました。yami-shoujyo-v2.1をお使いください。\n\n■説明\nご自分のアバター、改造OKなアバターの頭と組み合わせて使用する\n着せ替え用のドレス（ボディー）です。\nVRChatでの仕様を想定して制作しました。 \n改造、改変自由です。\n\n着せ替え方法　https://youtu.be/O1dSXy_HYLA\n広告動画　https://youtu.be/1DP0kgLL3y4\n\n\n■仕様\nスカート部分のユニコーンがアニメーションで回転します。\nヘッドドレスの星がついているリボンにはボーンがありますので、\n必要に応じてダイナミックボーンなどを設定して下さい。\nヘッドドレスは取り外しできます。\n\n■使い方\nご利用するアバターを3Dソフト等で頭部のみの状態にして下さい。\nHumanoid用のボーンは削除して下さい。\n（髪の毛やそれに付随する揺れ用のボーンがある場合は残して下さい）\n\nunity上で当データ（unitypackage）をインポートします。\nシーン上に衣装のプレファブを配置します。\nアバターの頭部を配置してサイズと位置を合わせます。\nヒエラルキー上からボディーのArmatureを選択します。\nArmatureのHead下（mixamorig:Headと言う名前です）にご利用のアバターの頭部を配置します。\n必要に応じて髪などにDynamicboneを設定して下さい。\n\n※VRCの自動アイトラッキングには対応しておりません\n　（改造で動作させる場合にはボーンの名前変更、ヘッドのボーンと接続する等の編集が必要になります）\n\n■ご利用にあたって\n\n許可\n○改造や改変\n○衣装の一部分のみを他アバターに使用する(使用するアバターの規約も同時に規約を満たしている必要があります)\n○収益化動画への写り込み(使用する頭部も同時に規約を満たしている必要があります)\n○衣装を利用したvTuber活動\n○unityで制作するゲームに使用できます。インディーズの場合、作者名と作品名の明記のみお願いします。企業の場合、別途利用料を頂戴しますので、ご連絡ください。\n\n禁止事項\n○第三者への貸出：VRChat上ペデスタルでの使用を禁止します。\n○配布：改造の有無を問わず、インターネットを通じて誰でもDL可能な状態にすることを禁止します。\n○売買：改造の有無を問わず、第三者への売買を禁止します。\n\nTo English speaking people.\nThis data can be remodeled, good for commercial use, do not redistribute.\n\n■利用規約\nこちらを御覧ください\nhttps://kuroneko-youhinten.wixsite.com/mysite/kiyaku-preview\n\n■免責事項\n当3Dモデルに起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について何らの責任も負いません。\n\n■制作協力\nデザイン：黒瀬サバト\nアドバイス：ユイト\n当モデルは、みに様のまんまるしぇーだー（https://twitter.com/Mini_9321_VR/status/1013973807323742208）を同封、設定させていただいております。\n\n■お問い合わせ\nBOOTHのメッセージ機能よりお願いいたします。\n\n制作：黒井","url":"https://booth.pm/ja/items/986272","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/986272/8a37c571-a82b-485b-a243-536fcd34a0f2_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3CYOKvgJjzvyr4UVzabURZaDftUBmevhQpK4SyaFWyo="></script>
+    nonce="dn6oRnedS8yl+sbRCLf0C2OrADIHPotvSKdiOwrUTSE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -462,9 +462,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
