--- a/VRChat/95/986095.html
+++ b/VRChat/95/986095.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "aWMtPjvn+0BnaztkNpxjSFZQPy0mHUUbXvO0voHwS6Q="></script>
+    "jxO28fFleZbtP2fOG4EI8Ap0BXbik/PlSDa+kzpC2TE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"量産型ディスクセイバー","description":"一般兵が扱いやすいように作られた携行性と量産性を重視作られた兵装。東の島国において「打刀」と呼ばれる刀の一種である。\n\n------------------------------\n\nこちらはVRChatを想定して作られた、「量産型ディスクセイバー」のFBXモデルです。\n\n\nモデルデータはunitypackage形式です。\n\nディスク部分にはボーンが入っているため、回転させることが可能です。予めアニメーションを組み込んでいるため、Prefabをそのまま読み込むことで、設定無しでディスクが回転します。\n\nマテリアルのAlbedoとEmissionのColorを変更することで、ディスク、刀身の白い部分の色をUnity上の操作だけで自由に変更することが出来ます。\n\n刀の切っ先にトレイルレンダラーを仕込んでいます。マテリアルの色を変更することで自由にトレイルの色を変更することが出来ます。\n\n\n-----アップデート情報------\n【V1.1】\n・このバージョンにて公開されました。\n\n【V1.2】\n・テクスチャを一部変更しました。\n\n\n-----利用規約-----\n・素材そのものの再配布、及び販売は禁止とさせていただきます。\n・それ以外は原則自由に使っていただいて構いませんが、予告なく規約が変更になる可能性があります。\n・規約は常に商品紹介文に記載されているものを最新の規約とします。\n・当商品を購入、使用して発生したトラブル等に関して、当方は一切の責任を負いません。\n\n----------\n最終更新日：2019/02/12","url":"https://booth.pm/ja/items/986095","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/7daba49c-946f-44ee-9363-049475872f48/i/986095/c1764d68-fbcc-4ced-a0da-56db47c30ed8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aWMtPjvn+0BnaztkNpxjSFZQPy0mHUUbXvO0voHwS6Q="></script>
+    nonce="jxO28fFleZbtP2fOG4EI8Ap0BXbik/PlSDa+kzpC2TE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -413,9 +413,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
