--- a/VRChat/90/985990.html
+++ b/VRChat/90/985990.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OlLYHWzzV8Ep/Hexk3BhNIiiVu6pRLOmtuhGUU9I/Rk="></script>
+    "Wm/qwUtCm5SyUtGkkiOTCeK7MWl48lLTPvnSEq0Yh9Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VR-UMAゔるまちゃん　アクリルスタンドフィギュア","description":"るーちゃんついにバーチャル空間から飛び出したのです！\n皆さんのところに遊びにいくのですー！うおーー\n\n───\n\nバーチャルモデルクリエイター・ぬこみやがプロデュースする\nVRChat発のバーチャルYoutuber「VR-UMAゔるまちゃん」のアクリルスタンド・アクリルフィギュアです。\nグッズ専用の描き下ろしイラストでるーちゃんがあなたの自宅にお邪魔します。\n\n※公式グッズです\n※受注生産式です\n※Pixiv Factoryから発送します。\n\n\nこの商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/985990","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2350"},"image":"https://booth.pximg.net/c/620x620/e6170a80-5060-4a22-8c22-c10792111eba/i/985990/7085abd5-10cb-4f63-b1eb-63a3175042eb_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OlLYHWzzV8Ep/Hexk3BhNIiiVu6pRLOmtuhGUU9I/Rk="></script>
+    nonce="Wm/qwUtCm5SyUtGkkiOTCeK7MWl48lLTPvnSEq0Yh9Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -420,9 +420,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
