--- a/VRChat/15/968915.html
+++ b/VRChat/15/968915.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "qHi9Je/B+PRAup+k4iqgTK56jyUkawlUidbHhPHUqGA="></script>
+    "dFhKxyNtMC3BYeJbu6nk7Ut8p3NQwVHEjFd5d7LL67c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【バーチャルマーケット販売モデル】SF風太刀","description":"【商品紹介】\n　\n　SF風の日本刀です。\n　未来的フォルムの中に日本刀らしさを残しました。\n\n\n【VRchat内でのpedestal使用について】\n\n　非営利での利用のみワールド設置のモデルへの付属が可能です\n\n--------------------\n\n『SF風太刀』とその付属の\nモデルデータ・テクスチャーデータの営利を目的とした再配付・販売は\n改変の有無を問わず禁止します。\n","url":"https://booth.pm/ja/items/968915","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/4e60aa39-4a63-4661-b1ed-1f656886ab4d/i/968915/d4f8c0d2-6f7b-4e44-bec4-c8ed85fb1397_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qHi9Je/B+PRAup+k4iqgTK56jyUkawlUidbHhPHUqGA="></script>
+    nonce="dFhKxyNtMC3BYeJbu6nk7Ut8p3NQwVHEjFd5d7LL67c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -372,9 +372,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
